[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://start_button_up.png" type="Texture" id=2]
[ext_resource path="res://start_up.png" type="Texture" id=3]
[ext_resource path="res://start_down.png" type="Texture" id=4]
[ext_resource path="res://tutorial_up.png" type="Texture" id=5]
[ext_resource path="res://tutorial_down.png" type="Texture" id=6]
[ext_resource path="res://background.png" type="Texture" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 7 )
expand = true

[node name="Start" type="Button" parent="."]
visible = false
margin_left = 120.0
margin_top = 48.0
margin_right = 1187.0
margin_bottom = 566.0
text = "Start"
icon = ExtResource( 2 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -32.0
margin_right = 101.0
margin_bottom = 52.0

[node name="Start" type="TextureButton" parent="HBoxContainer"]
margin_right = 202.0
margin_bottom = 66.0
rect_min_size = Vector2( 164, 66 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Turorial" type="TextureButton" parent="HBoxContainer"]
margin_top = 70.0
margin_right = 202.0
margin_bottom = 136.0
rect_min_size = Vector2( 164, 66 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Authors" type="Button" parent="HBoxContainer"]
margin_top = 140.0
margin_right = 202.0
margin_bottom = 160.0
text = "Autors"

[node name="Generator" type="Button" parent="HBoxContainer"]
margin_top = 164.0
margin_right = 202.0
margin_bottom = 184.0
text = "Generator"

[connection signal="pressed" from="HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/Turorial" to="." method="_on_Turorial_pressed"]
[connection signal="pressed" from="HBoxContainer/Authors" to="." method="_on_Authors_pressed"]
[connection signal="pressed" from="HBoxContainer/Generator" to="." method="_on_Generator_pressed"]
